Add earwaxx cleaning

--- a/_d/42.md
+++ b/_d/42.md
@@ -163,6 +163,12 @@ Alternatives:
 
 Most people start with progressives because they want one pair that does everything. Once you adapt (2-3 weeks), they're fantastic.
 
+## Ear Wax and Hearing: The Silent Saboteur
+
+While we're on the topic of age-related changes, your ears also need attention. Ear wax buildup becomes more common as you age, and it can significantly affect your hearing. If you notice muffled hearing or feel like there's something in your ear, you might have impacted wax.
+
+**Personal note:** When you have impacted earwax, you can go to the doctor, wait 30 minutes to be seen by the doctor, wait another 30 minutes for the medical assistant to come clean it, then spend 30 minutes while they shoot water into your ear till a big hunk of wax comes out, then wait another 30 minutes for the doctor to come back and confirm it's clean. Or you can use a [mini shovel and a camera on a stick](https://www.amazon.com/dp/B0D9HV84DJ?tag=ighe-20). Don't use Q-tips - they just push wax deeper and can damage your ear canal or eardrum.
+
 ## Other Health Stuff
 
 - Eat mostly fruits and vegetables, and try not to eat too much.
