Add posts on joy

--- a/_posts/2017-04-12-happy.md
+++ b/_posts/2017-04-12-happy.md
@@ -69,6 +69,14 @@ Two framings I've seen:
 
 The joy of consumption. Eating chocolate, watching TV, procrastinating. This joy is like sweet food, they have a jolt of pleasure, but they go quickly, and leave you wanting more.
 
+At its core, pleasure is simply relief from tension—release from what you cannot hold within. This is why even the crudest bodily pleasures can feel so intense.
+
+**The Akbar-Birbal Story on Pleasure** {#akbar-birbal}
+
+Emperor Akbar once asked his courtiers what the greatest pleasure in life was. Various answers came—wealth, power, sex, fine food. Birbal declared it was defecating. Akbar was so offended by this crude answer that he told Birbal he would be executed unless he could prove it.
+
+Birbal arranged a royal camping trip in the wilderness. He made sure Akbar was fed lavishly—rich foods and plenty of drink—but there were no toilet facilities anywhere. To make matters worse, Birbal surrounded the camp with a ring of women, so the emperor couldn't simply relieve himself in the bushes without profound embarrassment. Days passed. The pressure built unbearably. Finally, when Akbar could hold it no longer and was allowed proper relief, the pleasure was so overwhelming that he immediately admitted Birbal had won. The greatest pleasure truly was release from what you cannot hold within—and Birbal kept his head.
+
 #### Satisfaction Through flow, production, and accomplishing hard things
 
 Brooks defines satisfaction with a simple formula: **Satisfaction = What you have ÷ What you want**. You increase satisfaction by achieving goals OR by wanting less.
