Fix typos in 2016-02-03-positive-computing-survey.md

--- a/_d/42.md
+++ b/_d/42.md
@@ -8,7 +8,7 @@ redirect_from:
 imagefeature: https://github.com/idvorkin/blob/raw/master/blog/racoon-health-struggle.png
 ---
 
-You survived young kids, marriage, house, some easy crises, and now it's time for remember , a healthy woman has a thousand wishes, a sick woman - just one: Things i wish I knew at 42
+You survived young kids, marriage, house, some easy crises, and now it's time to remember, a healthy woman has a thousand wishes, a sick woman - just one: Things I wish I knew at 42
 
 <!-- prettier-ignore-start -->
 <!-- vim-markdown-toc-start -->
@@ -104,7 +104,7 @@ All those financial models from your 20s thinking about paying debt and saving f
   - Remember that your body is now at 75%. Marathons and deadlifts need to take a back seat to low-impact routines.
   - Find a way to exercise that works for you,
 
-## Colonoscopy: The Camera Nobody Wants to Be In Front Of
+## Colonoscopy: The Ultimate Midlife Adventure
 
 **Personal note:** I put this off for years. Then a friend got diagnosed with colon cancer and it scared me straight. Got the colonoscopy and guess what? Polyps. Multiple polyps. The doctor removed them during the procedure and I'm fine. Don't be like me and wait until fear motivates you. Just get it done.
 
@@ -175,7 +175,7 @@ While we're on the topic of age-related changes, your ears also need attention. 
 # more ideas
 
 - Prepare for the day when your employer casts you aside in favor of someone younger who has eagerly drank the kool aid and will work cheap.
-- Don't think about the past unless it's a happy memory. Don't re-examine negative outcomes through the arallax view of the present.
+- Don't think about the past unless it's a happy memory. Don't re-examine negative outcomes through the parallax view of the present.
 - This is your peak earnings, and peak productivity. You've got maximum experience and minimal mental decline.
 - As you get older, you will decline, the work you do in your 40s will be the starting point for your decline, and simultaneously impact your rate of decline.
-- If you always wanted a motorcycle or boat or tattoo or Corvette or whatever, now is the time to buy such things if you're able. Don't be upset if you can't afford such things as vou've made it
+- If you always wanted a motorcycle or boat or tattoo or Corvette or whatever, now is the time to buy such things if you're able. Don't be upset if you can't afford such things as you've made it
