Refresh markdown TOCs and headings

--- a/_d/42.md
+++ b/_d/42.md
@@ -22,7 +22,7 @@ You survived young kids, marriage, house, some easy crises, and now it's time fo
 - [Who this talk is for](#who-this-talk-is-for)
 - [Balance](#balance)
 - [Health - Goodbye my friend](#health---goodbye-my-friend)
-  - [Colonoscopy: The Ultimate Midlife Adventure](#colonoscopy-the-ultimate-midlife-adventure)
+  - [Colonoscopy: The Camera Nobody Wants to Be In Front Of](#colonoscopy-the-camera-nobody-wants-to-be-in-front-of)
   - [Vision: Welcome to the Arm's Length Club](#vision-welcome-to-the-arms-length-club)
   - [Other Health Stuff](#other-health-stuff)
 - [Themes](#themes)
@@ -63,6 +63,8 @@ Retirement is less about stopping work and more about achieving the freedom to c
 At 50, you still have the physical capability, mental energy, and family connections that may be diminished at 65. The gap year isn't about escaping work - it's about making intentional investments in health, relationships, and mastery while you still have the capital to invest. These deposits compound for decades, but the window to make them is closing.
 
 Three dragons guard this treasure: **Scarcity** (whispering you can't afford it), **Entropy** (promising you'll waste it without structure), and **Squander** (insisting it won't matter). The real risk isn't facing these dragons - it's letting this window close unopened.
+
+## The Gap Year Alternative: Why Wait Until 65?
 
 {% include summarize-page.html src="/retire" %}
 {% include summarize-page.html src="/gap-year" %}
