--- a/_posts/2017-04-12-happy.md
+++ b/_posts/2017-04-12-happy.md
@@ -71,7 +71,7 @@ The joy of consumption. Eating chocolate, watching TV, procrastinating. This joy
 
 At its core, pleasure is simply relief from tension—release from what you cannot hold within. This is why even the crudest bodily pleasures can feel so intense.
 
-**The Akbar-Birbal Story on Pleasure** {#akbar-birbal}
+##### The Akbar-Birbal Story on Pleasure {#akbar-birbal}
 
 Emperor Akbar once asked his courtiers what the greatest pleasure in life was. Various answers came—wealth, power, sex, fine food. Birbal declared it was defecating. Akbar was so offended by this crude answer that he told Birbal he would be executed unless he could prove it.
 
