Fix: Larry the life coach

--- a/_d/y2026.md
+++ b/_d/y2026.md
@@ -89,7 +89,7 @@ Keep building on [CHOP](/chop) success. See [How Igor CHOPs](/how-igor-chops) fo
 
 ### Time.ltd - Mortality Software
 
-Like the Hair Club for Men: I'm not only building it, I'm also a client. Larry is my AI life coach — the evolution of Time.ltd into something I actually use daily.
+Like the Hair Club for Men: I'm not only building it, I'm also a client. Meet Larry the life coach — the evolution of Time.ltd into something I actually use daily.
 
 - Goal tracking
 - Reviews (weekly, monthly, yearly)
